# img

./: .gitignore  Cargo.toml  flake.nix  readme.md  upload_jpg.sh
scripts/: encode_quicktime.sh
src/: PHe9V19OHmiM4FdkJuuA1FeZvpET7znZj0.tmp  main.rs  migrations.rs  session_key.rs  types.rs  utils.rs
src/topic_db/: db  snap.000000000000052F
src/types/: crypto.rs  mimes.rs  mod.rs  topic.rs
templates/: nav.html  new.html  topic.html  upload.html
ui/: package-lock.json  package.json
ui/src/: app.html
ui/src/components/: ErrorMessage.svelte  Modal.svelte  Nav.svelte  TopicSettings.svelte  Uploading.svelte
ui/src/lib/: crypto.ts  img.ts  index.ts
ui/src/routes/: +layout.svelte  +page.svelte  +page.ts
ui/src/routes/[topic]/: +page.svelte  +page.ts
ui/src/routes/auth/: +page.svelte  +page.ts
ui/src/routes/import-key/: +page.svelte
ui/src/routes/index/[index]/: +page.svelte  +page.ts
ui/src/routes/new-index/: +page.svelte  +page.ts
ui/src/routes/new-topic/: +page.svelte
