[package]
name = "sangha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
smol = "1.2.5"
blake3 = "1.1.0"
askama = "0.10.5"
http-types = "2.10.0"
serde={ version = "1.0.130", features = ["derive"] }
