[package]
name = "img"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tide = "0.16.0"
smol = "1.2.5"
blake3 = "1.1.0"
structopt = "0.3"
http-types = "2.10.0"
serde={ version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
anyhow="1.0"
acidjson="0.1.2"
async-fs = "1.6.0"
blocking = "1.3.1"
image = "0.24.6"
async-channel = "1.9.0"
rexiv2 = "0.10.0"
rand = "0.8.5"
rand_core = "0.6.3"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
base64 = "0.21.2"
sha3 = "0.10.8"

actix-web = "4"
actix-session = "0.5"
actix-rt = "2"
actix-cors = "0.6"
env_logger = "0.10.0"
log = "0.4.20"
bytes = "1.4.0"
futures-util = "0.3.28"
hex = "0.4.3"
